--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "homepage": "https://fazilmirr.github.io/Random-Quranic-Verse/",
+  "homepage": "https://fazilmirr.github.io/Random-Quranic-Verse",
   "name": "random-quran",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "preview": "vite preview"
   },
   "dependencies": {
